going home my dude

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -2,11 +2,30 @@
   "ConnectionStrings": {
     "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=H4ServersideTodo"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5219"
+      },
+      "Https": {
+        "Url": "https://localhost:7246",
+        //"Certificate": {
+        //  "Subject": "localhost",
+        //  "Store": "My",
+        //  "Location": "CurrentUser",
+        //  "AllowInvalid": true
+        //}
+      }
+    }
+  }
 }
