--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,11 +6,16 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Information"
     }
   },
 
   "AllowedHosts": "*",
+
+  "Hashing": {
+    "Algorithm": "SHA-384",
+    "Salt": "y0RfTRYFv0ktlAOc" // Change before first start on production!
+  }
 
   "Kestrel": {
     "Endpoints": {
@@ -19,12 +24,12 @@
       },
       "Https": {
         "Url": "https://localhost:7246",
-        //"Certificate": {
-        //  "Subject": "localhost",
-        //  "Store": "My",
-        //  "Location": "CurrentUser",
-        //  "AllowInvalid": true
-        //}
+        "Certificate": {
+          "Subject": "localhost",
+          "Store": "My",
+          "Location": "CurrentUser",
+          "AllowInvalid": true
+        }
       }
     }
   }
