--- a/API/API.csproj
+++ b/API/API.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
 			<PrivateAssets>all</PrivateAssets>
@@ -23,7 +24,6 @@
 	
 	<ItemGroup>
 		<Folder Include="wwwroot"></Folder>
-		<Folder Include="Pages"></Folder>
 	</ItemGroup>
 
 
