Todo items and CPR verification page done

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,16 +6,16 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
 
   "AllowedHosts": "*",
 
   "Hashing": {
-    "Algorithm": "SHA-384",
+    "Algorithm": "SHA384",
     "Salt": "y0RfTRYFv0ktlAOc" // Change before first start on production!
-  }
+  },
 
   "Kestrel": {
     "Endpoints": {
@@ -23,13 +23,13 @@
         "Url": "http://localhost:5219"
       },
       "Https": {
-        "Url": "https://localhost:7246",
-        "Certificate": {
-          "Subject": "localhost",
-          "Store": "My",
-          "Location": "CurrentUser",
-          "AllowInvalid": true
-        }
+        "Url": "https://localhost:7246"
+        //"Certificate": {
+        //  "Subject": "localhost",
+        //  "Store": "My",
+        //  "Location": "CurrentUser",
+        //  "AllowInvalid": true
+        //}
       }
     }
   }
